tests-integration/fixtures/checking/150_derive_bifunctor_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type) (f :: (t6 :: Type) -> Type) (g :: (t10 :: Type) -> Type)
    (a :: (t6 :: Type)) (b :: (t10 :: Type)).
    (f :: (t6 :: Type) -> Type) (a :: (t6 :: Type)) ->
    (g :: (t10 :: Type) -> Type) (b :: (t10 :: Type)) ->
    WrapBoth @(t6 :: Type) @(t10 :: Type)
      (f :: (t6 :: Type) -> Type)
      (g :: (t10 :: Type) -> Type)
      (a :: (t6 :: Type))
      (b :: (t10 :: Type))
WrapBothNoConstraint ::
  forall (t18 :: Type) (t22 :: Type) (f :: (t18 :: Type) -> Type) (g :: (t22 :: Type) -> Type)
    (a :: (t18 :: Type)) (b :: (t22 :: Type)).
    (f :: (t18 :: Type) -> Type) (a :: (t18 :: Type)) ->
    (g :: (t22 :: Type) -> Type) (b :: (t22 :: Type)) ->
    WrapBothNoConstraint @(t18 :: Type) @(t22 :: Type)
      (f :: (t18 :: Type) -> Type)
      (g :: (t22 :: Type) -> Type)
      (a :: (t18 :: Type))
      (b :: (t22 :: Type))

Types
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type).
    ((t6 :: Type) -> Type) -> ((t10 :: Type) -> Type) -> (t6 :: Type) -> (t10 :: Type) -> Type
WrapBothNoConstraint ::
  forall (t18 :: Type) (t22 :: Type).
    ((t18 :: Type) -> Type) -> ((t22 :: Type) -> Type) -> (t18 :: Type) -> (t22 :: Type) -> Type

Data
WrapBoth
  Quantified = :2
  Kind = :0

WrapBothNoConstraint
  Quantified = :2
  Kind = :0


Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]
WrapBothNoConstraint = [Representational, Representational, Nominal, Nominal]

Derived
derive (Functor (f :: Type -> Type), Functor (g :: Type -> Type)) => Bifunctor (WrapBoth @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type -> Type)
derive Bifunctor (WrapBothNoConstraint @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (f :: Type -> Type)
  --> 10:1..10:53
   |
10 | derive instance Bifunctor (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Functor (g :: Type -> Type)
  --> 10:1..10:53
   |
10 | derive instance Bifunctor (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
